# django_messages

./: .gitignore  =4.01  =4.1  LICENSE  MANIFEST.in  README.md  ansible.cfg  ansible_provision_test.yml  db.sqlite3  pytest.ini  setup.cfg  setup.py  tests.sh
django_messages/: apps.py  context_processors.py  django_messages  forms.py  models.py  soft_deletion.py  tasks.py  urls.py  views.py
django_messages.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
django_messages/migrations/: 0001_initial.py  0002_alter_message_options.py  0004_delete_message.py
django_messages/templates/django_messages/: base.html  message_create.html  message_detail.html  message_list.html
django_messages/testapp/: ansible.hosts  ansible_setup_test.yml  ansible_teardown_test.yml  apps.py  requirements.text  settings.py  setup.sh  test.sh  urls.py
django_messages/tests/: conftest.py
django_messages/tests/functional_tests/features/: conftest.py
django_messages/tests/functional_tests/features/create_message/steps/: test_create_message.py
django_messages/tests/functional_tests/features/delete_message/: delete_message.feature
django_messages/tests/functional_tests/features/delete_message/steps/: test_delete_message.py
django_messages/tests/functional_tests/features/message_detail/steps/: test_message_detail.py
django_messages/tests/functional_tests/features/message_list/steps/: test_message_list.py
django_messages/tests/functional_tests/features/update_message/steps/: test_message_update.py
django_messages/tests/unit_tests/: test_forms.py  test_setup.py  test_views.py
