[metadata]
name = django_messages
version = 1.0
data_files=[],
description = "A Django app that provides a basic message model, that can be used on its own or optionally made abstract and then extended."
long_description = file: README.md
long_description_content_type='text/markdown'
url = https://github.com/millerthegorilla/django_messages
author = James Miller
author_email = jamesstewartmiller@gmail.com
license = MiT  # Example license
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2.9  # Replace "X.Y" as appropriate
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = True
packages = find:
python_requires = >=3.8
install_requires =
    django_profile@git+https://github.com/millerthegorilla/django_profile
